fixed openjfx module